# raycaster-in-het-weekend

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  chapter-2-generate-ppm.cpp  chapter-3-ray-and-background.cpp  chapter-4-ray-and-sphere.cpp  chapter-5-surface-normals.cpp  chapter-6-antialiasing.cpp  chapter-7-diffuse-materials.cpp  chapter-8-metal-materials.cpp  conanfile.txt  generate-ppm  generate-ppm.cpp  generate-ppm.h  geometry.hpp  hittable.hpp  main.cpp  ray.cpp  ray.h  ray.hpp  util.cpp  util.h
artifacts/: chapter2.ppm  chapter3.ppm  chapter4.ppm  chapter5.ppm  chapter6.ppm  chapter7.ppm
chapters/: 2_generate-ppm.cpp  3_ray_and_background.cpp  3_ray_and_background.h  4_ray_and_sphere.cpp  4_ray_and_sphere.h  5_surface_normals.cpp  5_surface_normals.h  6_antialiasing.cpp  6_antialiasing.h  7_diffuse_materials.cpp  7_diffuse_materials.h  chapter8_metal_material.hpp
core/: camera.hpp  hittable.hpp  logger.hpp  util.cpp  util.h
generate-ppm.dSYM/Contents/: Info.plist
generate-ppm.dSYM/Contents/Resources/DWARF/: generate-ppm
